lib/c_wrapper.h

double vrvToolkit_getTimeForElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getTimesForElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getVersion(void *tkPtr);
bool vrvToolkit_loadData(void *tkPtr, const char *data);
bool vrvToolkit_loadFile(void *tkPtr, const char *filename);
void vrvToolkit_redoLayout(void *tkPtr, const char *c_options);
void vrvToolkit_redoPagePitchPosLayout(void *tkPtr);
const char *vrvToolkit_renderData(void *tkPtr, const char *data, const char *options);
const char *vrvToolkit_renderToExpansionMap(void *tkPtr);
bool vrvToolkit_renderToExpansionMapFile(void *tkPtr, const char *filename);
const char *vrvToolkit_renderToMIDI(void *tkPtr);
bool vrvToolkit_renderToMIDIFile(void *tkPtr, const char *filename);
const char *vrvToolkit_renderToPAE(void *tkPtr);
bool vrvToolkit_renderToPAEFile(void *tkPtr, const char *filename);
const char *vrvToolkit_renderToSVG(void *tkPtr, int page_no, bool xmlDeclaration);
bool vrvToolkit_renderToSVGFile(void *tkPtr, const char *filename, int pageNo);
const char *vrvToolkit_renderToTimemap(void *tkPtr, const char *c_options);
bool vrvToolkit_renderToTimemapFile(void *tkPtr, const char *filename, const char *c_options);
void vrvToolkit_resetOptions(void *tkPtr);
void vrvToolkit_resetXmlIdSeed(void *tkPtr, int seed);
bool vrvToolkit_saveFile(void *tkPtr, const char *filename, const char *c_options);
bool vrvToolkit_select(void *tkPtr, const char *selection);
bool vrvToolkit_setInputFrom(void *tkPtr, const char *inputFrom);
bool vrvToolkit_setOptions(void *tkPtr, const char *options);
bool vrvToolkit_setOutputTo(void *tkPtr, const char *outputTo);
bool vrvToolkit_setResourcePath(void *tkPtr, const char *path);
bool vrvToolkit_setScale(void *tkPtr, int scale);