lib/verovio.dart


  late final _getTimeForElementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_getTimeForElement');
  late final _getTimeForElement = _getTimeForElementPtr.asFunction<
      double Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  String getTimesForElement(String xmlId) {
    return _getTimesForElement(_pointer, xmlId.toNativeUtf8()).toDartString();
  }

  late final _getTimesForElementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_getTimesForElement');
  late final _getTimesForElement = _getTimesForElementPtr.asFunction<
      ffi.Pointer<ffi2.Utf8> Function(
          ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  String getVersion() {
    return _getVersion(_pointer).toDartString();
  }

  late final _getVersionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(
              ffi.Pointer<ffi.Void>)>>('vrvToolkit_getVersion');
  late final _getVersion = _getVersionPtr
      .asFunction<ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>)>();

  bool loadData(String data) {
    return _loadData(_pointer, data.toNativeUtf8()) == 1;
  }

  late final _loadDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_loadData');
  late final _loadData = _loadDataPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool loadFile(String filename) {
    return _loadFile(_pointer, filename.toNativeUtf8()) == 1;
  }

  late final _loadFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_loadFile');
  late final _loadFile = _loadFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  void redoLayout(String options) {
    return _redoLayout(_pointer, options.toNativeUtf8());
  }

  late final _redoLayoutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_redoLayout');
  late final _redoLayout = _redoLayoutPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  void redoPagePitchPosLayout() {
    return _redoPagePitchPosLayout(_pointer);
  }

  late final _redoPagePitchPosLayoutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'vrvToolkit_redoPagePitchPosLayout');
  late final _redoPagePitchPosLayout = _redoPagePitchPosLayoutPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  String renderData(String data, String options) {
    return _renderData(_pointer, data.toNativeUtf8(), options.toNativeUtf8())
        .toDartString();
  }

  late final _renderDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_renderData');
  late final _renderData = _renderDataPtr.asFunction<
      ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi2.Utf8>, ffi.Pointer<ffi2.Utf8>)>();

  String renderToExpansionMap() {
    return _renderToExpansionMap(_pointer).toDartString();
  }

  late final _renderToExpansionMapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(
              ffi.Pointer<ffi.Void>)>>('vrvToolkit_renderToExpansionMap');
  late final _renderToExpansionMap = _renderToExpansionMapPtr
      .asFunction<ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>)>();

  bool renderToExpansionMapFile(String filename) {
    return _renderToExpansionMapFile(_pointer, filename.toNativeUtf8()) == 1;
  }

  late final _renderToExpansionMapFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_renderToExpansionMapFile');
  late final _renderToExpansionMapFile =
      _renderToExpansionMapFilePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  String renderToMIDI() {
    return _renderToMIDI(_pointer).toDartString();
  }

  late final _renderToMIDIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(
              ffi.Pointer<ffi.Void>)>>('vrvToolkit_renderToMIDI');
  late final _renderToMIDI = _renderToMIDIPtr
      .asFunction<ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>)>();

  bool renderToMIDIFile(String filename) {
    return _renderToMIDIFile(_pointer, filename.toNativeUtf8()) == 1;
  }

  late final _renderToMIDIFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_renderToMIDIFile');
  late final _renderToMIDIFile = _renderToMIDIFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  String renderToPAE() {
    return _renderToPAE(_pointer).toDartString();
  }

  late final _renderToPAEPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(
              ffi.Pointer<ffi.Void>)>>('vrvToolkit_renderToPAE');
  late final _renderToPAE = _renderToPAEPtr
      .asFunction<ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>)>();

  bool renderToPAEFile(String filename) {
    return _renderToPAEFile(_pointer, filename.toNativeUtf8()) == 1;
  }

  late final _renderToPAEFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_renderToPAEFile');
  late final _renderToPAEFile = _renderToPAEFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  String renderToSVG(int pageNumber, bool xmlDeclaration) {
    return _renderToSVG(_pointer, pageNumber, xmlDeclaration ? 1 : 0)
        .toDartString();
  }

  late final _renderToSVGPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>, ffi.Int,
              ffi.Int)>>('vrvToolkit_renderToSVG');
  late final _renderToSVG = _renderToSVGPtr.asFunction<
      ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>, int, int)>();

  bool renderToSVGFile(String filename, int pageNo) {
    return _renderToSVGFile(_pointer, filename.toNativeUtf8(), pageNo) == 1;
  }

  late final _renderToSVGFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>,
              ffi.Int)>>('vrvToolkit_renderToSVGFile');
  late final _renderToSVGFile = _renderToSVGFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>, int)>();

  String renderToTimemap(String options) {
    return _renderToTimemap(_pointer, options.toNativeUtf8()).toDartString();
  }

  late final _renderToTimemapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi2.Utf8> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_renderToTimemap');
  late final _renderToTimemap = _renderToTimemapPtr.asFunction<
      ffi.Pointer<ffi2.Utf8> Function(
          ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool renderToTimemapFile(String filename, String options) {
    return _renderToTimemapFile(
            _pointer, filename.toNativeUtf8(), options.toNativeUtf8()) ==
        1;
  }

  late final _renderToTimemapFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_renderToTimemapFile');
  late final _renderToTimemapFile = _renderToTimemapFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>,
          ffi.Pointer<ffi2.Utf8>)>();

  void resetOptions() {
    return _resetOptions(_pointer);
  }

  late final _resetOptionsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'vrvToolkit_resetOptions');
  late final _resetOptions =
      _resetOptionsPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void resetXmlIdSeed(int seed) {
    return _resetXmlIdSeed(_pointer, seed);
  }

  late final _resetXmlIdSeedPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'vrvToolkit_resetXmlIdSeed');
  late final _resetXmlIdSeed = _resetXmlIdSeedPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  bool saveFile(String filename, String options) {
    return _saveFile(
            _pointer, filename.toNativeUtf8(), options.toNativeUtf8()) ==
        1;
  }

  late final _saveFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_saveFile');
  late final _saveFile = _saveFilePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>,
          ffi.Pointer<ffi2.Utf8>)>();

  bool select(String selection) {
    return _select(_pointer, selection.toNativeUtf8()) == 1;
  }

  late final _selectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_select');
  late final _select = _selectPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool setInputFrom(String inputFrom) {
    return _setInputFrom(_pointer, inputFrom.toNativeUtf8()) == 1;
  }

  late final _setInputFromPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_setInputFrom');
  late final _setInputFrom = _setInputFromPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool setOptions(String options) {
    return _setOptions(_pointer, options.toNativeUtf8()) == 1;
  }

  late final _setOptionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_setOptions');
  late final _setOptions = _setOptionsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool setOutputTo(String outputTo) {
    return _setOutputTo(_pointer, outputTo.toNativeUtf8()) == 1;
  }

  late final _setOutputToPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_setOutputTo');
  late final _setOutputTo = _setOutputToPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool setResourcePath(String path) {
    return _setResourcePath(_pointer, path.toNativeUtf8()) == 1;
  }

  late final _setResourcePathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi2.Utf8>)>>('vrvToolkit_setResourcePath');
  late final _setResourcePath = _setResourcePathPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi2.Utf8>)>();

  bool setScale(int scale) {
    return _setScale(_pointer, scale) == 1;
  }

  late final _setScalePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'vrvToolkit_setScale');
  late final _setScale =
      _setScalePtr.asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  String validatePAE(String data) {
    return _validatePAE(_pointer, data.toNativeUtf8()).toDartString();
  }
